--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
+    <!-- Thymeleaf 템플릿 엔진 (웹 인터페이스용) -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+
     <!-- OpenAI -->
     <dependency>
       <groupId>com.theokanning.openai-gpt3-java</groupId>
